refactor: commons 模块精细化打磨 — ErrorCode i18n 模板替换、BusinessException 静态工厂、Result/PageData 完善 + 测试
- ErrorCode.getMessage(args, locale) 实现 MessageFormat 模板替换
- BusinessException 新增 of() 静态工厂方法
- Result 新增 success()/fail(ErrorCode) 便捷方法
- PageData 新增 of() 便捷方法 + 完善 pages/hasNext/hasPrevious 计算
- 新增 ArgumentAssert 参数断言工具
- 新增 DateUtils/CollectionUtils/StringUtils/IoUtils 工具类
- 每个工具类配备单元测试

Co-Authored-By: Claude <noreply@anthropic.com>